--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,16 +4,16 @@
 <h2>JSON API</h2>
 
 <ul>
-  <li><a href="/instruments-json">GET members from teams.json</a></li>
+  <li><a href="/instruments-json">GET members from instruments.json</a></li>
 </ul>
 
 <h2>DB API</h2>
 <ol>
   <li>create database
-    <strong>'teams'</strong>
+    <strong>'investments'</strong>
     using
     <a href="http://localhost/phpmyadmin/" target="_blank">http://localhost/phpmyadmin</a>
   </li>
-  <li><a href="/teams/install">create MySQL members TABLE</a></li>
-  <li><a href="/teams">GET members from MySQL</a></li>
+  <li><a href="/investments/install">create MySQL members TABLE</a></li>
+  <li><a href="/investments">GET members from MySQL</a></li>
 </ol>
